plugins {
	id 'fabric-loom' version '1.12.+'
	id 'maven-publish'
	id "com.modrinth.minotaur" version "2.+"
	id "com.github.breadmoirai.github-release" version "2.+"
	id "com.matthewprenger.cursegradle" version "1.+"
}

static String getBuildNo() {
	if (System.getenv().containsKey("GITHUB_RUN_NUMBER")) {
		return "+build." + System.getenv("GITHUB_RUN_NUMBER")
	} else {
		return "+dev"
	}
}

version = "" + project.minecraft_version + "+" + project.mod_version + getBuildNo()
group = project.maven_group

System.out.println("Version: " + version)

base {
	archivesName = project.archives_base_name
}

repositories {
	maven { url = "https://maven.shedaniel.me/" }
	maven { url = "https://maven.terraformersmc.com/releases/" }
	maven { url = "https://maven.plutonia.xyz/maven" }
	maven { url = "https://maven.parchmentmc.org" }
	maven { url = "https://maven.quiltmc.org/repository/release" }
	maven { url = "https://api.modrinth.com/maven" }
    maven { url "https://maven.nucleoid.xyz/" }
}

sourceSets {
	testmod {
		compileClasspath += main.compileClasspath
		compileClasspath += main.output
		runtimeClasspath += main.runtimeClasspath
		runtimeClasspath += main.output
	}
}

loom {

    accessWidenerPath = file("src/main/resources/pdapi.classtweaker")

	runs {
		configureEach {
			vmArg "-XX:+AllowEnhancedClassRedefinition"
			vmArg "-XX:+IgnoreUnrecognizedVMOptions"
		}

		server {
			runDir 'run/server'
		}

		datagen {
			client()

			name "Minecraft Test Datagen"

			source sourceSets.testmod

			vmArg "-Dfabric-api.datagen"
			vmArg "-Dfabric-api.datagen.output-dir=${file("src/testmod/generated/resources")}"
			vmArg "-Dfabric-api.datagen.modid=pdapi_test"
			vmArg "-Dporting_lib.datagen.existing_resources=${file("src/testmod/resources")}"
		}

		testmodClient {
			client()
			name "Testmod Client"
			source sourceSets.testmod
			runDir "run/test"
		}

		testmodServer {
			server()
			name "Testmod Server"
			source sourceSets.testmod
			runDir "run/test_server"
		}
	}

}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings(loom.layered {
		it.mappings "org.quiltmc:quilt-mappings:${minecraft_version}+build.${quilt_mappings}:intermediary-v2"
		it.officialMojangMappings { nameSyntheticMembers = false }
		it.parchment "org.parchmentmc.data:parchment-${minecraft_version}:${parchment_version}@zip"
	})

	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"

	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
	// modCompileOnly "maven.modrinth:dehydration:${project.dehydration_version}"
	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}"

	modApi(include("ml.pluto7073:chemicals:$project.minecraft_version+$project.chemicals_version"))
	modApi(include("ml.pluto7073:plutonium:$plutonium_version"))

	// Dev Env
	modLocalRuntime "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
	modLocalRuntime "maven.modrinth:kiwi:$kiwi_version"
}

processResources {
	inputs.property "version", mod_version

	filesMatching("fabric.mod.json") {
		expand "version": mod_version
	}
}

tasks.register("buildOrPublish") {
	String user = System.getenv("PUBLISH_LOCATION")
	if (user != null && !user.isEmpty()) {
		dependsOn(tasks.publish)
		println("prepared for publish")
	} else {
		dependsOn(tasks.build)
		println("prepared for build")
	}
}


tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()
	withJavadocJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

apply from: 'gradle/publishing/publishing.gradle'
